--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://findingsu.github.io/kanban-app-reactJS/",
+  "homepage": "https://findingsu.github.io/kanban-app-reactJS/",
   "name": "kanban-app",
   "private": true,
   "version": "0.0.0",
