--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react": "^18.3.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "tailwindcss": "^3.4.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
