--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.3.1",
     "react-draggable": "^4.4.6",
     "react-icons": "^5.3.0",
+    "styled-components": "^6.1.12",
     "tailwindcss": "^3.4.10",
     "uuid": "^10.0.0"
   },
